    build-dep is no longer needed and these are both Build-Essential
  * Mini-policy for settings in smb.conf:
    - don't explicitly set settings to their default value
    - commented settings with the default value are commented with "#"
    - commented settings with a non-default value are commented with ";"
  * Apply this policy to "socket options". Closes: #476104

  [ Steve Langasek ]
  * New upstream release

  [ Peter Eisentraut ]
  * Merged from unstable:
  * Removed myself from Uploaders

 -- Christian Perrier <bubulle@debian.org>  Sun, 15 Jun 2008 08:17:58 +0200

samba (2:3.2.0~rc2-1) experimental; urgency=low

  [ Christian Perrier ]
  * New upstream release

  [ Steve Langasek ]
  * Enable building of cifs.spnego for the smbfs package, adding a
    build-dependency on keyutils-dev, to allow kerberos-based authentication
    of cifs mounts.  Closes: #480663, LP: #236830.

 -- Christian Perrier <bubulle@debian.org>  Thu, 12 Jun 2008 17:17:38 +0200

samba (2:3.2.0~rc1-2) experimental; urgency=low

  * Reupload to experimental. Sigh.

 -- Christian Perrier <bubulle@debian.org>  Sat, 31 May 2008 11:08:14 +0200

samba (1:3.2.0~rc1-1) unstable; urgency=low

  * New upstream version
  * debian/samba-doc.doc-base.samba-using: index file is no named toc.html

 -- Christian Perrier <bubulle@debian.org>  Fri, 30 May 2008 20:22:57 +0200

samba (1:3.2.0~pre3-1) experimental; urgency=low

  * New upstream version
  * debian/patches/fix-manpage-htmlchars.patch: dropped as fixed upstream
  * docs/registry removed from samba-doc as missing from upstream tarball
    (upstream bug #5421)
  * debian/samba-doc.doc-base.samba-using: The index (and only) file
    is now book.html

 -- Christian Perrier <bubulle@debian.org>  Sat, 26 Apr 2008 08:20:21 +0200

samba (1:3.2.0~pre2-2) experimental; urgency=low

  [ Christian Perrier ]
  * Upload to experimental with an epoch as the earlier version
    accidentally went to unstable.

  [ Peter Eisentraut ]