@@ -20,6 +20,8 @@ samba (2:3.2.0-1) UNRELEASED; urgency=low
     - commented settings with the default value are commented with "#"
     - commented settings with a non-default value are commented with ";"
   * Apply this policy to "socket options". Closes: #476104
+  * No longer gratuitously use /usr/lib/libsmbclient.so.0.1 but a more logical
+    libsmbclient.so.0 as upstream doesn't assign versions
 
   [ Steve Langasek ]
   * New upstream release
